--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ClassyTools – Worldclass PWA Toolbox</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icons/icon-192.png" type="image/png">
   <meta name="theme-color" content="#1a1a2e">
 </head>
@@ -20,7 +20,7 @@
   <footer>
     <p>&copy; 2025 ClassyTools. The Ultimate PWA Toolbox.</p>
   </footer>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
